--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -122,7 +122,7 @@ comprehensive and the compiler's error messages are clear and helpful. Rust also
 an easy to use, integrated package manager (named cargo), a dedicated build tool,
 an auto-formatter and many more.
 
-According to surveys conducted among developers, Rust is considered to be the most enjoyable
+According to surveys conducted amongst developers, Rust is considered to be the most enjoyable
 programming language for the 7th year in a row (as of 2022 summary, meaning it was always on top
 since its release in 2015). Over 87\% of respondents who have previously used Rust would
 like to continue programming in it.
