--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -128,7 +128,7 @@ since its release in 2015). Over 87\% of respondents who have previously used Ru
 like to continue programming in it.
 
 Because of the high level of safety it provides, Rust has also become the secondary
-language for writing Linux kernel (with the primary being C). While there have been
+language for writing the Linux kernel (with the primary being C). While there have been
 attempts to add other languages (f.e. C++ in 1997), Rust is the first one to successfully
 make it since the kernel's first release in 1991.
 
