--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -136,7 +136,7 @@ make it since the kernel's first release in 1991.
 
 Cargo is the official package manager for Rust. It is responsible for compiling the user's
 packages, downloading their dependencies and uploading them to the selected package registry.
-It is important to note that in Rust, packages are often refered to as crates with both names
+It is important to note that in Rust, packages are often refered to as \texttt{crates} with both names
 being equivalent and commonly used.
 
 One can think of cargo as the Rust analogue of Python's pip. But although their roles are similar,
