--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -142,7 +142,7 @@ being equivalent and commonly used.
 One can think of cargo as the Rust analogue of Python's pip. But although their roles are similar,
 cargo has many advantages making it a lot safer than pip:
 \begin{itemize}
-	\item Cargo's crates are installed using venvs (virtual environments), thus they cannot be
+	\item Cargo's crates are always installed using venvs (virtual environments), thus they cannot be
 		installed in a location that would interfere with unrelated code.
 	\item When user adds a crate to their project, they can only use its interface and there is
 		no possibility of accessing eventual dependencies installed with it.
