--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -149,7 +149,7 @@ cargo has many advantages making it a lot safer than pip:
 	\item The crate's name must also be included in a special file named \texttt{Cargo.toml}, not
 		just in the source code file.
 	\item To make the package's public interface explicit, Rust provides a series of tools for
-		privacy management. Because of this it is much more difficult for the user to make their
+		privacy management. Because of this, it is much more difficult for the user to make their
 		project dependent on something that the package's author did not intend to offer and could
 		make private in future versions, causing a difficult to detect break on the user's end.
 	\item Compatibility is taken seriously in Rust, thus packages' APIs are expected to be
