--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -164,7 +164,7 @@ cargo has many advantages making it a lot safer than pip:
 		system dependencies.
 	\item Cargo allows for an executable to contain different versions of the same package,
 		enabling the user to include multiple dependencies based on a shared sub-dependency.
-		If multiple versions of the sub-dependency are required, they are all included
+		When multiple versions of the sub-dependency are required, they are all included
 		without conflicts.
 \end{itemize}
 
