--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -196,7 +196,7 @@ system, the user may not need to provide an exact revision of a dependency in th
 		data about it in the file.
 	\item \texttt{Cargo.lock} is present -- for the dependencies already present in the file cargo
 		does not look for their newest version and instead downloads the one specified in the file.
-		For dependencies that are not present it does the same as above except it adds them to
+		For dependencies that are not present, it does the same as above except it adds them to
 		the file rather than overwrites it.
 \end{itemize}
 There is a dedicated command for updating the dependencies -- \texttt{cargo update}.
