--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -174,7 +174,7 @@ to compile. Every manifest has numerous sections, with the most important two be
 \begin{itemize}
 	\item \texttt{[package]} -- contains the information for cargo to compile the package.
 		The minimum that must be provided are the package's name and version. Additional fields
-		may be required if the maintainer wants to share their work with others by publishing
+		may be required when the maintainer wants to share their work with others by publishing
 		to a registry.
 	\item \texttt{[dependencies]} -- lists all of the package's dependencies. Before compiling,
 		cargo has to serach for and download all of them. The default search location is crates.io.
