--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -177,7 +177,7 @@ to compile. Every manifest has numerous sections, with the most important two be
 		may be required when the maintainer wants to share their work with others by publishing
 		to a registry.
 	\item \texttt{[dependencies]} -- lists all of the package's dependencies. Before compiling,
-		cargo has to serach for and download all of them. The default search location is crates.io.
+		cargo has to search for and download all of them. The default search location is crates.io.
 		In this case, the minimum required for each dependency are its name and version.
 \end{itemize}
 Presence of the manifest file allows the crates.io registry to display useful information about
