--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -181,7 +181,7 @@ to compile. Every manifest has numerous sections, with the most important two be
 		In this case, the minimum required for each dependency are its name and version.
 \end{itemize}
 Presence of the manifest file allows the crates.io registry to display useful information about
-a particular package. The users are provided with a Readme file, instructions on how to add
+a particular package. The users are provided with a \texttt{README.md} file, instructions on how to add
 the package to their own Cargo.toml file, a list of all available versions, statistics regarding
 the downloads for each version and more.
 
