--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -139,7 +139,7 @@ packages, downloading their dependencies and uploading them to the selected pack
 It is important to note that in Rust, packages are often refered to as \texttt{crates} with both names
 being equivalent and commonly used.
 
-One can think of cargo as the Rust analogue of Python's pip. But although their roles are similar,
+One can think of cargo as the Rust analogue of Python's pip. But despite their similar roles,
 cargo has many advantages making it a lot safer than pip:
 \begin{itemize}
 	\item Cargo's crates are always installed using venvs (virtual environments), thus they cannot be
