--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -185,7 +185,7 @@ a particular package. The users are provided with a \texttt{README.md} file, ins
 the package to their own Cargo.toml file, a list of all available versions, statistics regarding
 the downloads for each version and more.
 
-There also exists a second, special cargo file -- \texttt{Cargo.lock}. It contains detailed
+There also exists a second file for cargo -- \texttt{Cargo.lock}. It contains detailed
 information about the used dependencies. Since all dependencies come from some version control
 system, the user may not need to provide an exact revision of a dependency in their
 \texttt{Cargo.toml} file. In this case, there are two scenarios for what happens with the
