--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -232,7 +232,7 @@ The main purpose of semantic versioning is to make releasing new package version
 When systems with multiple dependencies are considered, the lack of semver can have serious
 consequences. If the dependency rules are too tight, one is in danger of facing a version lock
 (inability to release a new version of one package without new versions of all packages depending
-on it). On the other hand, if the rules are too loose, there is risk of version promiscuity
+on it). On the other hand, if the rules are too loose, there is a risk of version promiscuity
 (assuring that currently released version will be compatible with too many future releases).
 Without semver, such issues can occur and make it difficult for developers to further expand
 their projects.
