--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -269,7 +269,7 @@ in form of a tree, where every node denotes an occurence of some construct in it
 called ''abstract'', because it omits some syntax details, such as parantheses or if statements,
 and focuses on structural or contextual details.
 
-In most of the well-established programming languages semver validation is incredibly difficult
+In most of the well-established programming languages, semver validation is incredibly difficult
 or even close to impossible. This is caused by the general lack of attention to semver during
 their design processes. One of the possible approaches to cope with these difficulties is to try
 detecting semver violations by looking at the abstract syntax tree of a language. Such tree of
