--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -113,7 +113,7 @@ other memory-safe languages, Rust does not use reference counting nor a garbage 
 Instead it tracks the object lifetime of all the program's references during compilation,
 using its built-in mechanism named ''borrow checker''.
 
-Among many benefits and advantages of using Rust there are three dominant features. Firstly,
+Among many benefits and advantages of using Rust, there are three dominant features. Firstly,
 it provides the user with great performance, both time- and memory-wise, allowing for
 writing efficient applications. Secondly, it is reliable -- with extensive type system and
 focus on runtime safety, Rust prevents the user from making multiple bugs
