--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -114,7 +114,7 @@ Instead it tracks the object lifetime of all the program's references during com
 using its built-in mechanism named ''borrow checker''.
 
 Among many benefits and advantages of using Rust, there are three dominant features. Firstly,
-it provides the user with great performance, both time- and memory-wise, allowing for
+it provides the user with a great performance, both time- and memory-wise, allowing for
 writing efficient applications. Secondly, it is reliable -- with extensive type system and
 focus on runtime safety, Rust prevents the user from making multiple bugs
 already during compilation. Finally, it boosts productivity -- its documentation is
