--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -144,7 +144,7 @@ cargo has many advantages making it a lot safer than pip:
 \begin{itemize}
 	\item Cargo's crates are always installed using venvs (virtual environments), thus they cannot be
 		installed in a location that would interfere with unrelated code.
-	\item When user adds a crate to their project, they can only use its interface and there is
+	\item When a user adds a crate to their project, they can only use its interface and there is
 		no possibility of accessing eventual dependencies installed with it.
 	\item The crate's name must also be included in a special file named \texttt{Cargo.toml}, not
 		just in the source code file.
