--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -272,7 +272,7 @@ and focuses on structural or contextual details.
 In most of the well-established programming languages, semver validation is incredibly difficult
 or even close to impossible. This is caused by the general lack of attention to semver during
 their design processes. One of the possible approaches to cope with these difficulties is to try
-detecting semver violations by looking at the abstract syntax tree of a language. Such tree of
+detecting semver violations by looking at the abstract syntax tree of a language. Such trees of
 a particular language might be changed along with its development, what makes maintenance of this
 solution very time-consuming. Moreover, the work itself is pretty tedious and conceptually
 challenging since to check for semver violations one needs to work on the two trees at a time.
