Correct the separation in cargo definition

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -120,7 +120,7 @@ writing efficient applications. Secondly, it is reliable -- with extensive type 
 focus on runtime safety, Rust prevents the user from making multiple bugs
 already during compilation. Finally, it boosts productivity -- its documentation is
 comprehensive and the compiler's error messages are clear and helpful. Rust also provides
-an easy to use, integrated package manager (named cargo), a dedicated build tool,
+an easy to use, integrated package manager and a dedicated build tool (named cargo),
 an auto-formatter and many more.
 
 According to surveys conducted amongst developers, Rust is considered to be the most enjoyable
