Correct the bibliography

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -571,35 +571,35 @@ TODO:
 % \bibitem[Bea65]{beaman} Juliusz Beaman, \textit{Morbidity of the Jolly
 %     function}, Mathematica Absurdica, 117 (1965) 338--9.
 
-\bibitem[]{Rust-1} Rust Team,
+\bibitem{Rust-1} Rust Team,
 	\textit{Rust Programming Language} (2023) \\
 	https://www.rust-lang.org/
 
-\bibitem[]{Rust-2} Wikipedia,
+\bibitem{Rust-2} Wikipedia,
 	\textit{Rust (programming language)} (2023) \\
 	https://en.wikipedia.org/wiki/Rust\_(programming\_language)/
 
-\bibitem[]{survey} Stack Overflow,
+\bibitem{survey} Stack Overflow,
 	\textit{Annual Developer Survey} (2022) \\
 	https://insights.stackoverflow.com/survey/
 
-\bibitem[]{Rust-for-Linux} Wikipedia,
+\bibitem{Rust-for-Linux} Wikipedia,
 	\textit{Rust for Linux} (2023) \\
 	https://en.wikipedia.org/wiki/Rust\_for\_Linux/
 
-\bibitem[]{Cargo} Rust Team,
+\bibitem{Cargo} Rust Team,
 	\textit{The Cargo Book} (2023) \\
 	https://doc.rust-lang.org/cargo/index.html/
 
-\bibitem[]{Cargo-vs-pip} William Manley,
+\bibitem{Cargo-vs-pip} William Manley,
 	\textit{Pip and Cargo are not the same} (2022) \\
 	https://doc.rust-lang.org/cargo/index.html/
 
-\bibitem[]{Abstract-Syntax-Tree} Wikipedia,
+\bibitem{Abstract-Syntax-Tree} Wikipedia,
 	\textit{Abstract syntax tree} (2023) \\
 	https://en.wikipedia.org/wiki/Abstract\_syntax\_tree/
 
-\bibitem[]{Semantic-Versioning} semver.org,
+\bibitem{Semantic-Versioning} semver.org,
 	\textit{Semantic Versioning 2.0.0} (2022) \\
 	https://semver.org/
 
