Rephrased the sentence about semver purpose

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -228,7 +228,8 @@ With these rules, version numbers and their changes reflect actions in the under
 package's code. By definition, two versions are considered compatible if their leftmost non-zero
 component remains unchanged.
 
-The main purpose of semantic versioning is to make releasing new package versions easier.
+The main purpose of semantic versioning is to track the changes of a package's API and reflect
+their severity with appropriate numbering.
 When systems with multiple dependencies are considered, the lack of semver can have serious
 consequences. If the dependency rules are too tight, one is in danger of facing a version lock
 (inability to release a new version of one package without new versions of all packages depending
