Missed one line

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -285,7 +285,7 @@ and focuses on structural or contextual details.
 % \textit{rustdoc}, which exports all of the crate's public API into an accessible form (both human-
 % and machine-readable). Thanks to these, the semver validation problem seems particularily managable
 % in Rust, and there are some attempts addressing the issue already (mentioned in chapter
-\ref{r:chapter_stateoftheart}).
+% \ref{r:chapter_stateoftheart}).
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
