--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -138,7 +138,12 @@ make it since the kernel's first release in 1991.
 Cargo is the official package manager for Rust. It is responsible for compiling the user's
 packages, downloading their dependencies and uploading them to the selected package registry.
 It is important to note that in Rust, packages are often refered to as \texttt{crates} with both names
-being equivalent and commonly used.
+being equivalent and commonly used. Most of the currently publicly available crates are stored
+in the Rust community's default crate registry, \texttt{crates.io}. The role of the registries is to
+allow users to easily find appropriate crates for their projects, as well as publish their own work
+to be used by others. Each registry contains an index, which itself has a searchable list of
+all the crates available with its registry. Cargo uses the selected registry and index to download
+crates and update dependencies.
 
 One can think of cargo as the Rust analogue of Python's pip. But despite their similar roles,
 cargo has many advantages making it a lot safer than pip:
